# solwyn-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: pre-commit
src/solwyn/: CLAUDE.md  __init__.py  _base.py  _constants.py  _privacy.py  _proxies.py  _run.py  _token_details.py  _types.py  _validation.py  budget.py  circuit_breaker.py  client.py  config.py  exceptions.py  reporter.py  stream.py  tokenizer.py
tests/: CLAUDE.md  conftest.py  test_budget.py  test_budget_confirm_failures.py  test_budget_spec_compliance.py  test_budget_thread_safety.py  test_client.py  test_client_spec_compliance.py  test_exception_hierarchy.py  test_no_production_asserts.py  test_privacy_firewall.py  test_provider_proxies.py  test_stream.py  test_stream_accumulators.py  test_stream_nonblocking.py
tests/integration/: conftest.py  test_async_budget.py  test_budget_check.py  test_budget_confirm.py  test_metadata_ingest.py
tests/unit/: conftest.py  test_async_budget_enforcer.py  test_async_metadata_reporter.py  test_budget.py  test_budget_confirm_failures.py  test_budget_spec_compliance.py  test_client.py  (+19 more)
todos/: 001-pending-p2-circuit-breaker-accounting-edge-cases.md  002-pending-p2-is-failover-semantics-contract-drift.md  003-pending-p2-sync-async-retry-block-duplication.md  004-pending-p2-tail-latency-doubling-no-cap-or-backoff.md  005-pending-p2-attempt-context-dataclass.md  006-pending-p2-missing-fallback-test-coverage.md  007-pending-p2-start-time-reassignment-loses-primary-latency.md  008-pending-p2-budget-reservation-model-mismatch-on-rescued-retry.md  009-pending-p3-remove-redundant-comments.md  010-pending-p3-consolidate-streaming-tests.md  011-pending-p3-push-dispatch-into-provider-adapter.md  012-pending-p3-skip-retry-on-non-retriable-http-status.md  013-pending-p3-attach-fallback-exception-as-note.md  014-pending-p3-tighten-any-to-dict-str-object.md  015-pending-p3-remove-silent-model-unknown-default.md  016-pending-p3-inline-prepare-fallback-kwargs-helper.md
(+11 files in other folders)
