[project]
name = "solwyn"
version = "0.1.0"
description = "AI Agent Control Plane SDK — hard spending caps, automatic failover, per-agent cost attribution"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Solwyn", email = "dev@solwyn.io" }]
readme = "README.md"
keywords = ["ai", "llm", "observability", "cost-management", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["tiktoken>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://solwyn.ai"
Documentation = "https://docs.solwyn.ai"
Repository = "https://github.com/solwyn-ai/solwyn-python"
"Bug Tracker" = "https://github.com/solwyn-ai/solwyn-python/issues"
"Model Pricing" = "https://mpi.sh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solwyn"]
exclude = ["**/CLAUDE.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests that mock all external dependencies",
    "integration: marks tests as integration tests that may use real services",
    "performance: marks tests as performance tests",
    "stress: marks tests as long-running stress tests",
    "chaos: marks tests as chaos tests that intentionally cause failures",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "tiktoken"
ignore_missing_imports = true
